--- a/gb/24/6/28/n14279133.md
+++ b/gb/24/6/28/n14279133.md
@@ -25,39 +25,41 @@
 <div>?<strong>了解更多澳洲即时要闻及生活资讯，请点击</strong><strong>?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></div>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279162.md#1">受益于房价飙升 澳人家庭财富连涨6个季度</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279034.md#1">广告市场疲软 澳九号娱乐集团裁200人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279102.md#1">拖欠房贷者继续增加 创下5年内高点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279043.md#1">企图杀害议员 纽卡斯尔青年被控恐怖主义罪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279007.md#1">布市大火 300仓储设施被毁 数十家居民撤离</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279013.md#1">阿桑奇返澳与家人团聚 澳洲政界反应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278966.md#1">悉尼内西区谋杀案：受害人遭室友割喉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279005.md#1">垃圾场有毒污泥泄露 悉尼北部一河流受污染</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278581.md#1">大批留学生恐错过开学日 澳大学批评政府拖延签证审批</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307908.md#1">澳美英签署关键法律文件 AUKUS正式生效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307905.md#1">新闻集团或出售旗下付费电视公司Foxtel</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307904.md#1">Rex债权人首次开会 质询财务状况 设立委员会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307902.md#1">Bunnings五金店召回烧烤食物温度计</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307804.md#1">昆州政府拟设公有非营利加油站  压低油价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307791.md#1">调查：数百万澳人为看奥运赛事熬夜或翘班</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307864.md#1">专家揭示为什么今冬流感季持续更久</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307735.md#1">新州未来四年内或短缺1000名全科医生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307801.md#1">原料成本大增 知名巧克力产品价格翻倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307789.md#1">调查：澳三大首府家庭每周交通花费逾500元</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/3/n11362608.md#1" target="_blank">林辉：文革集邮也是罪过</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/20/n11267496.md#1" target="_blank">少年心声：你若心里难受 就请看《转法轮》</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277381.md#1">【秦鹏观察】美新法案3大特点 直击中共死穴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277971.md#1">【马克时空】美防空导弹先给乌克兰 韩国或援乌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277406.md#1">【新闻大家谈】美国会众院通过重磅法案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275935.md#1">Costco烤鸡包装有重大改变 粉丝为何不高兴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276844.md#1">中国经济萧条到处可见 商场门庭冷落</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277610.md#1">李强称“经济不能下猛药”遭删 泄露何秘密？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276867.md#1">史嘉蕾兴奋主演《侏罗纪4》 愿意被任何东西吃掉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276922.md#1">颂乐高雄开唱说想留在台湾 献唱张惠妹歌曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277316.md#1">为角色增重15公斤 黄晓明领奖时激动手抖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278023.md#1">章子怡疑不满新片戏份被剪？受访片段引揣测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276883.md#1">咖喱饭酱汁该放左边或右边？ 日本网友投票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275940.md#1">造成人体不舒服、生病的六种邪气（中）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307614.md#1">【菁英论坛】紧张局势陡升 中东成火药桶？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/28/n14279133.htm">薪资上涨前 签订企业协议员工人数创新高</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
